ansible/roles/argocd/files/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-infra
  hostnames:
    - argo.home.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
